--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(hh-img)
 set(CMAKE_CXX_STANDARD 20)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
+set(TEST_HHIMG ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules")
@@ -17,13 +18,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib/
 # Need to defined variable Hedgehog_INCLUDE_DIR to the hedgehog path
 # hedgehog
 find_package(Hedgehog REQUIRED)
-
-# OpenBLAS
-find_package(OpenBLAS QUIET)
-# OpenBLAS
 find_package(X11 QUIET)
-
-# Cuda
 find_package(CUDA QUIET)
 find_package(NVTX QUIET)
 
@@ -38,6 +33,36 @@ set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${Hedgehog_CXX_FLAGS})
 if (NOT MSVC)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra -Werror -pedantic -g")
 endif (NOT MSVC)
+
+# # Gtest
+include(FetchContent) # Used to download GTEST
+if (TEST_HHIMG)
+    message("Fetch Gtest")
+    if (POLICY CMP0135)
+        FetchContent_Declare(
+                googletest
+                URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+                DOWNLOAD_EXTRACT_TIMESTAMP true
+        )
+    else ()
+        FetchContent_Declare(
+                googletest
+                URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+        )
+    endif ()
+
+    # For Windows: Prevent overriding the parent project's compiler/linker settings
+    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    FetchContent_MakeAvailable(googletest)
+
+    enable_testing()
+
+    add_executable(hhimg_test tests/hhimg_test.cc)
+    target_link_libraries(hhimg_test gtest_main)
+
+    include(GoogleTest)
+    gtest_discover_tests(hhimg_test)
+endif (TEST_HHIMG)
 
 # files of the project
 set(hh_img_files
