--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,31 @@ if (NOT MSVC)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra -Werror -pedantic -g")
 endif (NOT MSVC)
 
+# files of the project
+set(hh_img_files
+    src/hhimg/concrete/chain_algorithm.h
+    src/hhimg/concrete/data/pixel_value.h
+    src/hhimg/concrete/data/mask.h
+    src/hhimg/algorithm/gray_scale.h
+    src/hhimg/algorithm/non_maximum_suppression.h
+    src/hhimg/algorithm/crop.h
+    src/hhimg/algorithm/minus.h
+    src/hhimg/algorithm/convolute.h
+    src/hhimg/tools/concepts.h
+    src/hhimg/tools/shared_ptr_operators.h
+    src/hhimg/tools/pixel_operators.h
+    src/hhimg/tools/algorithm_operators.h
+    src/hhimg/tools/utils.h
+    src/hhimg/hhimg.h
+    src/hhimg/abstract/abstract_algorithm.h
+    src/hhimg/abstract/abstract_image_factory.h
+    src/hhimg/abstract/data/abstract_pixel.h
+    src/hhimg/abstract/data/abstract_image.h
+    src/impl/cimg/cimg_pixel.h
+    src/impl/cimg/cimg_image_factory.h
+    src/impl/cimg/cimg_image.h
+    )
+
 # # Gtest
 include(FetchContent) # Used to download GTEST
 if (TEST_HHIMG)
@@ -57,32 +82,12 @@ if (TEST_HHIMG)
 
     enable_testing()
 
-    add_executable(hhimg_test tests/hhimg_test.cc)
+    add_executable(hhimg_test tests/hhimg_test.cc ${hh_img_files})
     target_link_libraries(hhimg_test gtest_main)
 
     include(GoogleTest)
     gtest_discover_tests(hhimg_test)
 endif (TEST_HHIMG)
-
-# files of the project
-set(hh_img_files
-    ./src/hhimg/concrete/chain_algorithm.h
-    ./src/hhimg/concrete/data/pixel_value.h
-    ./src/hhimg/concrete/data/mask.h
-    ./src/hhimg/algorithm/gray_scale.h
-    ./src/hhimg/algorithm/non_maximum_suppression.h
-    ./src/hhimg/algorithm/mask_applier.h
-    ./src/hhimg/tools/image_operators.h
-    ./src/hhimg/tools/pixel_operators.h
-    ./src/hhimg/tools/algorithm_operators.h
-    ./src/hhimg/hhimg.h
-    ./src/hhimg/abstract/abstract_pixel_factory.h
-    ./src/hhimg/abstract/abstract_algorithm.h
-    ./src/hhimg/abstract/data/abstract_pixel.h
-    ./src/hhimg/abstract/data/abstract_image.h
-    ./src/impl/cimg/cimg_pixel.h
-    ./src/impl/cimg/cimg_image.h
-    )
 
 # main executable
 add_executable(hh-img src/main.cc ${hh_img_files})
