now the tile factory return a pixel tile. There is no need to implement an abstract tile now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,14 +78,14 @@ if (TEST_HHIMG)
     gtest_discover_tests(hhimg_test)
 endif (TEST_HHIMG)
 
-add_library(cimg
+add_library(cimg SHARED
   src/impl/cimg/cimg.cc
   src/impl/cimg/cimg_image.cc
-  src/impl/cimg/cimg_tile.cc
+  src/impl/cimg/cimg_tile_factory.cc
 )
 
 # main executable
 add_executable(
   hh-img src/main.cc
   ${hh_img_files})
-target_link_libraries(hh-img cimg ${X11_LIBRARIES})
+target_link_libraries(hh-img PRIVATE cimg ${X11_LIBRARIES})
