--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,53 +40,95 @@ endif (NOT MSVC)
 
 # files of the project
 set(hh_img_files
-  src/hhimg/algorithm/convolution.h
-  src/hhimg/algorithm/tile/minus/minus_state.h
-  src/hhimg/algorithm/tile/minus/minus_state_manager.h
-  src/hhimg/algorithm/tile/minus/minus_wrapper.h
-  src/hhimg/algorithm/tile/split_graph/split_state.h
-  src/hhimg/algorithm/tile/split_graph/split_graph.h
-  src/hhimg/algorithm/tile/split_graph/split_task.h
-  src/hhimg/algorithm/tile/trigger_state.h
-  src/hhimg/algorithm/tile/update_stencils_state.h
-  src/hhimg/algorithm/tile/copy.h
-  src/hhimg/algorithm/tile/create_tmp_tiles.h
-  src/hhimg/algorithm/tile/update_stencils_task.h
-  src/hhimg/algorithm/tile/tmp_tiles_graph.h
-  src/hhimg/algorithm/tile/split.h
-  src/hhimg/algorithm/tile/update_stencils_state_manager.h
-  src/hhimg/algorithm/tile/update_stencils_graph.h
-  src/hhimg/algorithm/map_mutate.h
-  src/hhimg/algorithm/threshold.h
-  src/hhimg/algorithm/crop.h
-  src/hhimg/algorithm/gray_scale.h
-  src/hhimg/algorithm/rgb_map.h
-  src/hhimg/algorithm/contrast_brightness.h
-  src/hhimg/algorithm/fast_loader/test_algorithm.h
-  src/hhimg/algorithm/minus.h
-  src/hhimg/concrete/data/fl_img.h
-  src/hhimg/concrete/data/pixel_tile.h
-  src/hhimg/concrete/data/mask.h
-  src/hhimg/concrete/data/fl_view.h
-  src/hhimg/concrete/data/pixel.h
-  src/hhimg/concrete/hedgehog_pipeline.h
-  src/hhimg/concrete/chain_algorithm.h
-  src/hhimg/concrete/fast_loader_pipeline.h
+  src/config.h
+  src/hhimg/sequential/algorithm/convolution.h
+  src/hhimg/sequential/algorithm/map_mutate.h
+  src/hhimg/sequential/algorithm/threshold.h
+  src/hhimg/sequential/algorithm/crop.h
+  src/hhimg/sequential/algorithm/gray_scale.h
+  src/hhimg/sequential/algorithm/rgb_map.h
+  src/hhimg/sequential/algorithm/contrast_brightness.h
+  src/hhimg/sequential/algorithm/minus.h
+  src/hhimg/sequential/concrete/data/pixel.h
+  src/hhimg/sequential/concrete/chain_algorithm.h
+  src/hhimg/sequential/abstract/data/abstract_pixel_container.h
+  src/hhimg/sequential/abstract/abstract_image_factory.h
+  src/hhimg/sequential/abstract/abstract_algorithm.h
+  src/hhimg/sequential/operators.h
+  src/hhimg/hedgehog/algorithm/convolution.h
+  src/hhimg/hedgehog/algorithm/tile/minus/minus_state.h
+  src/hhimg/hedgehog/algorithm/tile/minus/minus_state_manager.h
+  src/hhimg/hedgehog/algorithm/tile/minus/minus_wrapper.h
+  src/hhimg/hedgehog/algorithm/tile/split_graph/split_state.h
+  src/hhimg/hedgehog/algorithm/tile/split_graph/split_graph.h
+  src/hhimg/hedgehog/algorithm/tile/split_graph/split_task.h
+  src/hhimg/hedgehog/algorithm/tile/update_borders/update_stencils_state.h
+  src/hhimg/hedgehog/algorithm/tile/update_borders/update_stencils_task.h
+  src/hhimg/hedgehog/algorithm/tile/update_borders/update_stencils_state_manager.h
+  src/hhimg/hedgehog/algorithm/tile/update_borders/update_stencils_graph.h
+  src/hhimg/hedgehog/algorithm/tile/copy.h
+  src/hhimg/hedgehog/algorithm/tile/create_tmp_tiles.h
+  src/hhimg/hedgehog/algorithm/tile/tmp_tiles_graph.h
+  src/hhimg/hedgehog/algorithm/map_mutate.h
+  src/hhimg/hedgehog/algorithm/threshold.h
+  src/hhimg/hedgehog/algorithm/gray_scale.h
+  src/hhimg/hedgehog/algorithm/contrast_brightness.h
+  src/hhimg/hedgehog/algorithm/minus.h
+  src/hhimg/hedgehog/helpers.h
+  src/hhimg/hedgehog/concrete/data/pixel_tile.h
+  src/hhimg/hedgehog/concrete/hedgehog_sub_pipeline.h
+  src/hhimg/hedgehog/concrete/hedgehog_pipeline.h
+  src/hhimg/hedgehog/abstract/tile_algorithms.h
+  src/hhimg/hedgehog/abstract/abstract_tile_factory.h
+  src/hhimg/hedgehog/abstract/data/abstract_tile.h
+  src/hhimg/hedgehog/abstract/abstract_hh_algorithm.h
+  src/hhimg/hedgehog/operators.h
+  src/hhimg/macros.h
   src/hhimg/tools/null_type.h
   src/hhimg/tools/concepts.h
   src/hhimg/tools/perf_recorder.h
-  src/hhimg/tools/algorithm_operators.h
   src/hhimg/tools/utils.h
+  src/hhimg/tools/hhutils/trigger_state.h
+  src/hhimg/tools/hhutils/identity_state.h
+  src/hhimg/common/mask.h
+  src/hhimg/common/abstract_pixel_container.h
+  src/hhimg/common/abstract_image.h
+  src/hhimg/common/pixel.h
   src/hhimg/hhimg.h
-  src/hhimg/abstract/abstract_tile_factory.h
-  src/hhimg/abstract/hh/tile_algorithms.h
-  src/hhimg/abstract/hh/abstract_hh_algorithm.h
-  src/hhimg/abstract/data/abstract_tile.h
-  src/hhimg/abstract/data/abstract_pixel_container.h
-  src/hhimg/abstract/data/abstract_image.h
-  src/hhimg/abstract/abstract_image_factory.h
-  src/hhimg/abstract/abstract_algorithm.h
-  src/hhimg/abstract/fast_loader/abstract_fl_algorithm.h
+  src/hhimg/fast_loader/algorithm/convolution.h
+  src/hhimg/fast_loader/algorithm/map_mutate.h
+  src/hhimg/fast_loader/algorithm/threshold.h
+  src/hhimg/fast_loader/algorithm/gray_scale.h
+  src/hhimg/fast_loader/algorithm/views/minus/minus_state.h
+  src/hhimg/fast_loader/algorithm/views/minus/minus_state_manager.h
+  src/hhimg/fast_loader/algorithm/views/minus/minus_wrapper.h
+  src/hhimg/fast_loader/algorithm/views/split_graph/split_state.h
+  src/hhimg/fast_loader/algorithm/views/split_graph/split_graph.h
+  src/hhimg/fast_loader/algorithm/views/split_graph/split_task.h
+  src/hhimg/fast_loader/algorithm/views/update_borders/update_stencils_state.h
+  src/hhimg/fast_loader/algorithm/views/update_borders/update_stencils_task.h
+  src/hhimg/fast_loader/algorithm/views/update_borders/update_stencils_state_manager.h
+  src/hhimg/fast_loader/algorithm/views/update_borders/update_stencils_graph.h
+  src/hhimg/fast_loader/algorithm/views/copy.h
+  src/hhimg/fast_loader/algorithm/views/create_tmp_tiles.h
+  src/hhimg/fast_loader/algorithm/views/tmp_tiles_graph.h
+  src/hhimg/fast_loader/algorithm/views/release_view.h
+  src/hhimg/fast_loader/algorithm/rgb_map.h
+  src/hhimg/fast_loader/algorithm/contrast_brightness.h
+  src/hhimg/fast_loader/algorithm/fast_loader/test_algorithm.h
+  src/hhimg/fast_loader/algorithm/minus.h
+  src/hhimg/fast_loader/concrete/data/fl_img.h
+  src/hhimg/fast_loader/concrete/data/fl_view.h
+  src/hhimg/fast_loader/concrete/fast_loader_pipeline.h
+  src/hhimg/fast_loader/abstract/view_algorithms.h
+  src/hhimg/fast_loader/abstract/abstract_fl_algorithm.h
+  src/hhimg/fast_loader/operators.h
+  src/impl/cimg/cimg_image.h
+  src/impl/cimg/cimg.h
+  src/impl/cimg/safe_cimg.h
+  src/impl/cimg/cimg_image_factory.h
+  src/impl/cimg/cimg_tile_factory.h
+  src/impl/tiff_fl/grayscale_tiff_tile_loader.h
 )
 
 # # Gtest
